--- a/src/practices/react-transition-group/src/CompCSSTransition.css
+++ b/src/practices/react-transition-group/src/CompCSSTransition.css
@@ -8,7 +8,7 @@
 
 .exit{
   opacity: 1;
-}
+} 
 
 .exit-active{
   transition: opacity 1s ease-in-out;
@@ -37,3 +37,58 @@
 .appear-done{
   opacity: 1;
 }
+
+
+/* slide */
+.slide-appear,
+.slide-appear{
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+.slide-enter{
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+.slider-exit{
+  opacity: 0;
+  transform: translateX(0);
+}
+
+
+.slide-appear-active,
+.slide-enter-active{
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.slide-exit-active{
+  opacity: 0;
+  transform: translateX(100%);
+}
+
+.slide-appear-active,
+.slide-enter-active,
+.slide-exit-active{
+  transition: transform 500ms ease, opacity 500ms ease;
+}
+
+
+.outer{
+  position: relative;
+  padding-top: 102px;
+}
+
+.inner{
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin: 0;
+  width: 100%;
+  /* border: 1px solid #ddd; */
+  background-color: #2c82fd;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
