--- a/src/practices/react-transition-group/src/CompSwitchTransition.css
+++ b/src/practices/react-transition-group/src/CompSwitchTransition.css
@@ -6,12 +6,7 @@
 .slide-enter-active{
     opacity: 1;
     transform: translateX(0);
-    /* transition: transform 500ms ease; */
 }
-
-/* .slide-enter-done{
-    opacity: 1;
-} */
 
 .slide-exit{
     opacity: 1;
@@ -21,12 +16,8 @@
 .slide-exit-active{
     opacity: 0;
     transform: translateX(100%);
-    /* transition: transform 500ms ease; */
 }
 
-/* .slide-exit-done{
-    opacity: 0;
-} */
 
 .slide-enter-active,
 .slide-exit-active{
@@ -36,13 +27,18 @@
 
 
 .comp-switch-transition-demo-box{
-    /* position: relative; */
+    position: relative;
+    width: 240px;
+    padding-top: 92px;
 }
+
 .comp-switch-transition-demo-h1{
-    margin: 24px auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
     padding: 12px 0;
     width: 240px;
-    /* border: 1px solid #2c82fd; */
     background-color: #2c82fd;
     border-radius: 4px;
 }
