--- a/src/practices/react-transition-group/src/CompCSSTransition.css
+++ b/src/practices/react-transition-group/src/CompCSSTransition.css
@@ -1,4 +1,4 @@
-.enter-done{
+/* .enter-done{
   opacity: 1;
 }
 
@@ -36,7 +36,7 @@
 
 .appear-done{
   opacity: 1;
-}
+} */
 
 
 /* slide */
@@ -56,13 +56,12 @@
   transform: translateX(0);
 }
 
-
 .slide-appear-active,
 .slide-enter-active{
   opacity: 1;
   transform: translateX(0);
 }
-
+.slide-exit-done,
 .slide-exit-active{
   opacity: 0;
   transform: translateX(100%);
@@ -73,6 +72,7 @@
 .slide-exit-active{
   transition: transform 500ms ease, opacity 500ms ease;
 }
+
 
 
 .outer{
@@ -87,7 +87,7 @@
   margin: 0;
   width: 100%;
   /* border: 1px solid #ddd; */
-  background-color: #2c82fd;
+  /* background-color: #2c82fd; */
   border-radius: 6px;
   overflow: hidden;
 }
