--- a/src/practices/react-transition-group/src/CompSwitchTransition.css
+++ b/src/practices/react-transition-group/src/CompSwitchTransition.css
@@ -39,6 +39,6 @@
     margin: 0;
     padding: 12px 0;
     width: 240px;
-    background-color: #2c82fd;
+    /* background-color: #2c82fd; */
     border-radius: 4px;
 }
